cmake_minimum_required(VERSION 3.25)
project(20230915 C)
set(CMAKE_C_STANDARD 17)
add_executable(hello hello.c)
add_executable(guass guass.c)
add_executable(judge judge.c)
add_executable(self-homework-1 self-homework-1.c)
add_executable(self-homework-2 self-homework-2.c)
add_executable(volumn volumn.c)
add_executable(luogu-1000 luogu-1000.c)
add_executable(luogu-1001 luogu-1001.c)
add_executable(c-languang-1 c-languang-1.c)
add_executable(c-language-2 c-language-2.c)
add_executable(self-homework-3 self-homework-3.c)
add_executable(self-homework-4 self-homework-4.c)
add_executable(self-homework-5 self-homework-5.c)
add_executable(slef-homework-6 slef-homework-6.c)