cmake_minimum_required(VERSION 3.25)
project(20230915 C)
set(CMAKE_C_STANDARD 17)
add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(self-homework)
add_subdirectory(luogu)
add_subdirectory(book-homework)
add_subdirectory(c-language)
add_executable(judge judge.c)
add_executable(volumn volumn.c)
