add_executable(cycle cycle.c)
add_executable(sphere sphere.c)
add_executable(mol mol.c)
add_executable(admin admin.c)
target_link_libraries(admin m)
add_executable(ASCII ASCII.c)
add_executable(change change.c)
add_executable(PI PI.c)
add_executable(time time.c)
add_executable(julian julian.c)
add_executable(gravity gravity.c)
add_executable(equation equation.c)