add_executable(c-languang-1 c-languang-1.c)
add_executable(c-language-2 c-language-2.c)
add_executable(c-language-3 c-language-3.c)
add_executable(c-language-4 c-language-4.c)
add_executable(c-language-5 c-language-5.c)
add_executable(c-language-6 c-language-6.c)
add_executable(c-language-7 c-language-7.c)
add_executable(c-language-8 c-language-8.c)
add_executable(c-language-9 c-language-9.c)
add_executable(c-language-10 c-language-10.c)
add_executable(c-language-11 c-language-11.c)
add_executable(c-language-12 c-language-12.c)
add_executable(c-language-13 c-language-13.c)
add_executable(c-language-14 c-language-14.c)
add_executable(c-language-15 c-language-15.c)
add_executable(c-language-16 c-language-16.c)
add_executable(c-language-1018 c-language-1018.c)
add_executable(c-language-1019 c-language-1019.c)
add_executable(c-language-1020 c-language-1020.c)