add_executable(self-homework-1 self-homework-1.c)
add_executable(self-homework-2-1 self-homework-2-1.c)
add_executable(self-homework-2-2 self-homework-2-2.c)
add_executable(self-homework-3 self-homework-3.c)
add_executable(self-homework-4 self-homework-4.c)
add_executable(self-homework-5 self-homework-5.c)
add_executable(slef-homework-6 slef-homework-6.c)
add_executable(self-homework-7 self-homework-7.c)
add_executable(self-homework-8-1 self-homework-8-1.c)
add_executable(self-homework-8-2 self-homework-8-2.c)
add_executable(self-homework-9 self-homework-9.c)
add_executable(self-homework-10 self-homework-10.c)