add_executable(self-homework-1 self-homework-1.c)
add_executable(self-homework-2-1 self-homework-2-1.c)
add_executable(self-homework-2-2 self-homework-2-2.c)
add_executable(self-homework-3 self-homework-3.c)
add_executable(self-homework-4 self-homework-4.c)
add_executable(self-homework-5 self-homework-5.c)
add_executable(slef-homework-6 slef-homework-6.c)
add_executable(self-homework-7 self-homework-7.c)
add_executable(self-homework-8-1 self-homework-8-1.c)
add_executable(self-homework-8-2 self-homework-8-2.c)
add_executable(self-homework-9 self-homework-9.c)
add_executable(self-homework-10 self-homework-10.c)
add_executable(self-homework-11 self-homework-11.c)
add_executable(self-homework-12 self-homework-12.c)
add_executable(self-homework-13 self-homework-13.c)
add_executable(print-every-number print-every-number.c)
add_executable(count-every-letter count-every-letter.c)
add_executable(fib fib.c)
add_executable(factorial factorial.c)
add_executable(find-the-max find-the-max.c)
add_executable(sum sum.c)
add_executable(bubble-arrangement bubble-arrangement.c)
add_executable(repition repition.c)